hphp/hack/test/typecheck/yield_wait_for_result_bad2.php.legacy.exp
File "yield_wait_for_result_bad2.php", line 13, characters 3-11:
Invalid yield (Typing[4110])
File "yield_wait_for_result_bad2.php", line 12, characters 17-30:
This is an object of type Awaitable<int>
File "yield_wait_for_result_bad2.php", line 13, characters 3-11:
It is incompatible with an object of type Generator<int, int, _> (result of function with 'yield' in the body)
